--- a/indexwithvideo.html
+++ b/indexwithvideo.html
@@ -2,6 +2,7 @@
     <body>
 	<h1> Lessons List </h1>
 	
+<!--Lesson list begining-->
 	<ul> </ul>
 	
     	<li>
@@ -31,7 +32,8 @@
 	<li>
 	  <a href="./Lessons/Lesson11.html"target="_blank">Lesson 11</a>
 	</li>
-
+<!--Lesson list ending-->
+	
 	<iframe width="560"height="315" controls
 	   src="https://www.youtube.com/embed/YEZPxhMneOc?si=bXG8ErR58i_CYl_W" title= Chocolate Chip Recipe> 
 	</iframe>
